# attica

./: .gitignore  CMakeLists.txt  README.md  doxy.conf
docs/allocator/: FreeList.md  freelist.md
docs/numeric/: ModularArithmetic.md  QuantizationErrorFreeModeling.md
include/: float_is_close.h  hash_table.h  lease.h  lehmer.h  linked_list.h  logger.h  memory.h  node.h  prime.h  queue.h  singly.h  stack.h  unit_test.h
include/allocator/: arena.h  freelist.h  handle.h  knr.h  lease.h  memory.h  page.h  pool.h  stack.h
include/container/: list.h  node.h  queue.h  stack.h
include/container/list/: singly.h
include/core/: logger.h  memory.h  node.h  posix.h
include/map/: base.h  linear.h  open-address.h
include/numeric/: activation.h  constant.h  constants.h  float_is_close.h  lehmer.h  prime.h  type.h
include/sort/: heap.h
include/test/: unit.h
include/utf8/: byte.h  path.h  raw.h  string.h
src/: hash_table.c  lease.c  lehmer.c  linked_list.c  logger.c  memory.c  node.c  prime.c  unit_test.c
src/allocator/: arena.c  freelist.c  handle.c  knr.c  lease.c  memory.c  page.c  pool.c  stack.c
src/container/: list.c  node.c  stack.c
src/core/: logger.c  memory.c  node.c
src/list/: singly.c
src/map/: linear.c  open-address.c
src/numeric/: activation.c  constant.c  float_is_close.c  lehmer.c  prime.c  type.c
src/sort/: heap.c
src/test/: unit.c
src/utf8/: byte.c  path.c  raw.c
tests/: CMakeLists.txt  test_allocator_memory.c  test_linked_list.c  test_logger.c  test_memory.c  test_node.c  test_numeric_constant.c  test_utf8_byte.c  test_utf8_raw.c
tests/allocator/: CMakeLists.txt  test_freelist.c  test_knr.c
tests/container/: CMakeLists.txt  test_list.c  test_node.c  test_stack.c
tests/core/: CMakeLists.txt  test_logger.c  test_memory.c  test_node.c
tests/numeric/: test_constant.c
tests/sort/: CMakeLists.txt  test_heap.c
tests/utf8/: CMakeLists.txt  test_utf8_byte.c  test_utf8_raw.c
